--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,10 @@ dependencies:
   json_annotation: ^4.9.0
   fpdart: ^1.1.0
   hive: ^2.2.3
+
   hive_flutter: ^1.1.0
+  video_player: ^2.8.2
+  chewie: ^1.7.5
 
 dev_dependencies:
   flutter_test:
