--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   hive_flutter: ^1.1.0
   video_player: ^2.8.2
   chewie: ^1.7.5
+  permission_handler: ^12.0.1
+  flutter_audio_capture: ^1.1.11
+  pitch_detector_dart: ^0.0.7
+  pitchupdart: ^0.0.6
 
 dev_dependencies:
   flutter_test:
