--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^2.4.13
   mobx_codegen: ^2.6.0
+  flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.3.7
   freezed: ^2.5.7
   json_serializable: ^6.9.0
   hive_generator: ^2.0.1
@@ -107,3 +109,15 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon.png"
+
+flutter_native_splash:
+  color: "#121212"
+  image: "assets/icon.png"
+  android_12:
+    image: "assets/icon.png"
+    color: "#121212"
