--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,11 @@ dependencies:
   flutter_audio_capture: ^1.1.11
   pitch_detector_dart: ^0.0.7
   pitchupdart: ^0.0.6
+  firebase_core: ^4.2.1
+  firebase_auth: ^6.1.2
+  google_sign_in: ^6.2.1
+
+  cloud_firestore: ^6.1.0
 
 dev_dependencies:
   flutter_test:
