--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,8 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Firebase Secrets
+google-services.json
+GoogleService-Info.plist
+lib/firebase_options.dart
