--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   google_sign_in: ^6.2.1
 
   cloud_firestore: ^6.1.0
+  firebase_storage: ^13.0.4
+  image_picker: ^1.2.0
+  uuid: ^4.5.2
 
 dev_dependencies:
   flutter_test:
@@ -84,9 +87,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/data/
-  #   - images/a_dot_burr.jpeg
+  # assets:
+  #   - assets/data/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
